# estudo_agente

./: .gitignore  agente.py  buscador.py  consulta_db.py  db_csv.py  indexador.py  main.py  pyproject.toml  system_prompt.txt  teste.py
documentos/: progresso_fit.txt  progressofit_backend.md  progressofit_backend.txt  progressofit_frontend.md  progressofit_frontend.txt
estudo_agente/: __init__.py  agente.py  buscador.py  indexador.py
prompts/: hyde_prompt.txt  system_prompt.txt
scripts/: consulta_db.py  db_csv.py
